fixed layout issues, still more to fix

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,6 +4,9 @@
   padding-left: 2rem;
   padding-right: 2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+  width: 100%;
+  box-sizing: border-box;
 }
