--- a/src/app/components/chart/chart.scss
+++ b/src/app/components/chart/chart.scss
@@ -2,3 +2,9 @@ app-cta {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
